--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 py-Ultroid==2021.4.16
 gingerit
-Telethon==1.21.1
+Telethon
 git+https://github.com/buddhhu/search-engine-parser.git
 git+https://github.com/buddhhu/ofox.git
 git+https://github.com/ProgrammingError/rextester_py.git
 google-assistant-grpc
 tenacity
 google-assistant-sdk
+hachoir
+patool
